# Praman-Setu

./: .dockerignore  .env.example  .gitignore  AGENT_OUTPUTS.md  AGENT_OUTPUTS_high.md  AGENT_OUTPUTS_medium.md  AGENT_OUTPUTS_student.md  ARCHITECTURE_OVERVIEW.md  FINAL_ARCHITECTURE.md  PIPELINE.md  README.md  docker-compose.yml  patch_graph.py  pyproject.toml  run_real_test.py  test_gate5.py  test_reflector.py  test_validator.py
backend/: Dockerfile  config.py  main.py
backend/agents/: __init__.py  critic.py  diagnoser.py  explainer.py  findings.py  holistic_fixer.py  multi_issue_fixer.py  patcher.py  property_tester.py  reflector.py  syntax_fixer.py
backend/agents/prompts/: __init__.py  diagnoser_prompt.py  patcher_prompt.py
backend/input_handler/: __init__.py  classifier.py  detector.py  models.py  service.py
backend/llm/: __init__.py  client.py  models.py
backend/observability/: metrics.py
backend/orchestrator/: __init__.py  graph.py  holistic.py  iterative.py  proof_repair.py  repair_v2.py  state.py
backend/tests/agents/: test_diagnoser.py  test_patcher.py
backend/tools/: _bench.py  bug_ledger.py  complexity_smoke.py  context_builder.py  diff_regression.py  dump_agent_outputs.py  graph_smoke.py  iterative_smoke.py  neutralize.py  patch_applier.py  perf_smoke.py  pipeline_smoke.py  realistic_smoke.py  semantic_lint.py  test_module_constructor.py  test_quality.py  tracer.py  validator.py
backend/tools/sandbox/: __init__.py  executor.py  pool.py  smoke_test.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  stitch_output  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CodeInput.tsx  DiffViewer.tsx  FileUpload.tsx  Header.tsx  ReasoningTab.tsx  ResultCritic.tsx  ResultExplainer.tsx  SafetyTab.tsx  SandboxReport.tsx  TestsTab.tsx  Timeline.tsx  TraceViewer.tsx
frontend/src/hooks/: useApi.ts
samples/: high_bugs.py  medium_bugs.py  student.py
sandbox/: Dockerfile.python
tests/: test_bug_ledger.py  test_context_builder.py  test_critic.py  test_e2e_graph.py  test_explainer.py  test_findings.py  test_holistic.py  test_input_handler.py  test_iterative.py  test_neutralize.py  test_proof_repair.py  test_property_tester.py  test_reflector.py  test_repair_v2.py  test_semantic_lint.py  test_syntax_fix.py  test_test_module_constructor.py  test_tracer.py  test_validator.py
